[tool.poetry]
name = "ocr-preprocess"
version = "0.1.0"
description = ""
authors = ["aram rafeq <aramrafeq2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-image = "^0.17.2"
numpy = "^1.19.2"
plac = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
